--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,3 +34,71 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+.board__item {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
+.board {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
+
+.board__item {
+  width: 200px;
+  height: 200px;
+  border: 3px solid blue; }
+
+.board__item:nth-of-type(1) {
+  border-top: none;
+  border-left: none;
+  border-right: none; }
+
+.board__item:nth-of-type(2) {
+  border-top: none; }
+
+.board__item:nth-of-type(3) {
+  border-top: none;
+  border-right: none;
+  border-left: none; }
+
+.board__item:nth-of-type(4) {
+  border-right: none;
+  border-left: none;
+  border-top: none; }
+
+.board__item:nth-of-type(5) {
+  border-top: none; }
+
+.board__item:nth-of-type(6) {
+  border-top: none;
+  border-right: none;
+  border-left: none; }
+
+.board__item:nth-of-type(7) {
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: none; }
+
+.board__item:nth-of-type(8) {
+  border-top: none;
+  border-bottom: none; }
+
+.board__item:nth-of-type(9) {
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: none; }
+
+.board {
+  width: 600px;
+  height: 600px;
+  margin: 0 auto; }
+
+body {
+  margin: 0 auto; }
