Added circle and square css

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,4 @@
 @import "vendor/vendor";
 @import "blocks/board/board";
-
-body {
-  margin: 0 auto;
-}
-
- 
+@import "blocks/circle/circle";
+@import "blocks/square/square";
