--- a/src/css/main.css
+++ b/src/css/main.css
@@ -49,9 +49,23 @@ table {
           flex-wrap: wrap; }
 
 .board__item {
-  width: 200px;
-  height: 200px;
-  border: 3px solid blue; }
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.board__item {
+  width: 100px;
+  height: 100px;
+  border: 10px solid black; }
 
 .board__item:nth-of-type(1) {
   border-top: none;
@@ -96,9 +110,19 @@ table {
   border-bottom: none; }
 
 .board {
-  width: 600px;
-  height: 600px;
-  margin: 0 auto; }
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+  margin-top: 100px; }
 
-body {
-  margin: 0 auto; }
+.circle {
+  width: 60px;
+  height: 60px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background: black; }
+
+.square {
+  width: 60px;
+  height: 60px;
+  background: black; }
