--- a/src/scss/blocks/board/board.scss
+++ b/src/scss/blocks/board/board.scss
@@ -3,7 +3,8 @@
 .board {
   @extend %flex;
 
-  width: 600px;
-  height: 600px;
+  width: 300px;
+  height: 300px;
   margin: 0 auto;
+  margin-top: 100px;
 }
