--- a/src/scss/blocks/board/board__item.scss
+++ b/src/scss/blocks/board/board__item.scss
@@ -1,9 +1,10 @@
 .board__item {
   @extend %boxborder;
+  @extend %flexcenter;
 
-  width: 200px;
-  height: 200px;
-  border: 3px solid blue;
+  width: 100px;
+  height: 100px;
+  border: 10px solid black;
 }
 
 .board__item:nth-of-type(1) {
