--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,6 +62,9 @@ table {
       -ms-flex-align: center;
           align-items: center; }
 
+body {
+  position: relative; }
+
 .board__item {
   width: 100px;
   height: 100px;
@@ -126,3 +129,14 @@ table {
   width: 60px;
   height: 60px;
   background: black; }
+
+.modal {
+  width: 400px;
+  height: auto;
+  background: pink;
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%); }
