--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,9 @@
 @import "vendor/vendor";
+@import "body";
 @import "blocks/board/board";
 @import "blocks/circle/circle";
 @import "blocks/square/square";
+@import "blocks/modal/modal";
+
+
+ 
