Added information block and method rendering information turn

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -140,3 +140,6 @@ body {
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%); }
+
+.information__turn {
+  text-align: center; }
