--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,5 @@
 @import "blocks/circle/circle";
 @import "blocks/square/square";
 @import "blocks/modal/modal";
-
-
- 
+@import "blocks/information/information";
+  
