--- a/src/css/main.css
+++ b/src/css/main.css
@@ -48,7 +48,7 @@ table {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
 
-.board__item {
+.board__item, .reset {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -143,3 +143,15 @@ body {
 
 .information__turn {
   text-align: center; }
+
+.win-info {
+  text-align: center; }
+
+.reset {
+  width: 150px;
+  height: 30px;
+  margin: 0 auto;
+  margin-top: 30px;
+  border: 1px dashed black; }
+  .reset:hover {
+    cursor: pointer; }
