--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,4 +5,5 @@
 @import "blocks/square/square";
 @import "blocks/modal/modal";
 @import "blocks/information/information";
-  
+@import "blocks/win-info/win-info";
+@import "blocks/reset/reset";
