Stylised win info text

--- a/src/scss/blocks/win-info/win-info.scss
+++ b/src/scss/blocks/win-info/win-info.scss
@@ -1,5 +1,9 @@
-@import "win-info__text";
-
 .win-info {
+  display: none;
   text-align: center;
+  font-size: 26px;
 }
+
+@import "win-info__text";
+@import "win-info__text--colored";
+@import "win-info--visible";
