--- a/src/css/main.css
+++ b/src/css/main.css
@@ -116,7 +116,7 @@ body {
   width: 300px;
   height: 300px;
   margin: 0 auto;
-  margin-top: 100px; }
+  margin-top: 50px; }
 
 .circle {
   width: 60px;
@@ -163,7 +163,16 @@ body {
   text-align: center; }
 
 .win-info {
-  text-align: center; }
+  display: none;
+  text-align: center;
+  font-size: 26px; }
+
+.win-info__text--colored {
+  color: #7DBEA7;
+  font-weight: bold; }
+
+.win-info--visible {
+  display: block; }
 
 .reset {
   width: 150px;
