--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,16 +36,31 @@ table {
   border-spacing: 0; }
 
 .board__item {
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .board {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap; }
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
 
 .board__item, .reset {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center; }
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
 
 body {
   position: relative; }
@@ -106,7 +121,8 @@ body {
 .circle {
   width: 60px;
   height: 60px;
-  border-radius: 50%;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
   background: black; }
 
 .square {
@@ -121,7 +137,9 @@ body {
   position: absolute;
   top: 100px;
   left: 50%;
-  transform: translateX(-50%); }
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%); }
 
 .game-start__options--computer {
   font-weight: bold;
@@ -150,41 +168,6 @@ body {
   font-size: 21px;
   color: #D77400;
   font-weight: bold; }
-
-.information__turn--other-color {
-  color: #7DBEA7; }
-
-.win-info {
-  display: none;
-  text-align: center;
-  font-size: 26px; }
-
-.win-info__text--colored {
-  color: #7DBEA7;
-  font-weight: bold; }
-
-.win-info--visible {
-  display: block; }
-
-.reset {
-  width: 150px;
-  height: 30px;
-  margin: 0 auto;
-  margin-top: 30px;
-  border: 1px dashed black; }
-  .reset:hover {
-    cursor: pointer; }
-nt-size: 16px;
-  text-align: center; }
-
-.information {
-  margin-top: 20px;
-  margin-bottom: 20px; }
-
-.information__turn {
-  text-align: center;
-  font-size: 20px;
-  color: #D77400; }
 
 .information__turn--other-color {
   color: #7DBEA7; }
