--- a/src/css/main.css
+++ b/src/css/main.css
@@ -76,6 +76,30 @@ table {
   100% {
     opacity: 1; } }
 
+@-webkit-keyframes slide {
+  0% {
+    left: 100%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    position: absolute; }
+  100% {
+    left: 0%;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    position: static; } }
+
+@keyframes slide {
+  0% {
+    left: 100%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    position: absolute; }
+  100% {
+    left: 0%;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    position: static; } }
+
 body {
   position: relative; }
 
@@ -130,7 +154,12 @@ body {
   width: 300px;
   height: 300px;
   margin: 0 auto;
-  margin-top: 50px; }
+  margin-top: 50px;
+  left: 0px;
+  -webkit-animation: slide 3s 0;
+  animation: slide 3s 0;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards; }
 
 .circle {
   width: 60px;
@@ -171,7 +200,11 @@ body {
   margin-top: 40px;
   margin-bottom: 40px;
   font-size: 20px;
-  text-align: center; }
+  text-align: center;
+  -webkit-animation: slide 3s 0;
+  animation: slide 3s 0;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards; }
 
 .information {
   margin-top: 20px;
@@ -208,7 +241,11 @@ body {
   height: 30px;
   margin: 0 auto;
   margin-top: 30px;
-  border: 1px dashed black; }
+  border: 1px dashed black;
+  -webkit-animation: slide 3s 0;
+  animation: slide 3s 0;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards; }
   .reset:hover {
     cursor: pointer; }
 
