--- a/src/scss/blocks/reset/reset.scss
+++ b/src/scss/blocks/reset/reset.scss
@@ -6,7 +6,7 @@
   border: 1px dashed black;
 
   @extend %flexcenter;
-  @include animation('slide 3s 0');
+  @include animation(0s, 3s, "slide");
 
   &:hover {
     cursor: pointer;
