--- a/src/scss/blocks/circle/circle.scss
+++ b/src/scss/blocks/circle/circle.scss
@@ -1,6 +1,6 @@
 .circle {
-  width: 60px;
-  height: 60px;
   border-radius: 50%;
   background: black;
+
+  @include animation(0s, 1s, "showFigure");
 }
